Changed the name from default.aspx to login.aspx
it's expected that login.aspx will handle all the login requests. if
someone his a page where they aren't auth they will get redirected ot
login.aspx.

--- a/CASP.csproj
+++ b/CASP.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="ActiveDirectory.cs" />
     <Compile Include="CASP1.cs" />
+    <Compile Include="CASP3.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
