Working demo of the v3 protocol.
Their are many ways to do this. You can wire auth right in web.config.
You can not use forms authentication. This is just a sample of how we
use CAS auth + ADS authorization.

--- a/CASP.csproj
+++ b/CASP.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Default.aspx" />
     <Content Include="Login.aspx" />
     <Content Include="Dox.txt" />
     <Content Include="Web.config" />
@@ -65,7 +66,13 @@
   <ItemGroup>
     <Compile Include="ActiveDirectory.cs" />
     <Compile Include="CASP1.cs" />
-    <Compile Include="CASP3.cs" />
+    <Compile Include="Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
