--- a/Web.config
+++ b/Web.config
@@ -9,6 +9,13 @@
     <system.web>
       <compilation debug="true" targetFramework="4.5" />
       <httpRuntime targetFramework="4.5" />
-    </system.web>
 
+      <authentication mode="Forms">
+        <forms name="casauth" loginUrl="Login.aspx"></forms>        
+      </authentication>
+      <authorization>
+        <deny users="?" />        
+      </authorization>
+    </system.web>
+  
 </configuration>
